[profile.dev]
split-debuginfo = "unpacked"

[workspace]
members = [
  "associated-token-account/program",
  "associated-token-account/program-test",
  "binary-option/program",
  "binary-oracle-pair/program",
  "examples/rust/cross-program-invocation",
  "examples/rust/custom-heap",
  "examples/rust/logging",
  "examples/rust/sysvar",
  "examples/rust/transfer-lamports",
  "examples/rust/transfer-tokens",
  "feature-gate/program",
  "feature-proposal/program",
  "feature-proposal/cli",
  "governance/addin-mock/program",
  "governance/addin-api",
  "governance/program",
  "governance/test-sdk",
  "governance/tools",
  "governance/chat/program",
  "instruction-padding/program",
  "libraries/discriminator",
  "libraries/concurrent-merkle-tree",
  "libraries/math",
  "libraries/merkle-tree-reference",
  "libraries/pod",
  "libraries/program-error",
  "libraries/tlv-account-resolution",
  "libraries/type-length-value",
  "libraries/type-length-value-derive-test",
  "memo/program",
  "name-service/program",
  "managed-token/program",
  "record/program",
  "shared-memory/program",
  "single-pool/cli",
  "single-pool/program",
  "stake-pool/cli",
  "stake-pool/program",
  "stateless-asks/program",
  "token-collection/program",
  "token-group/example",
  "token-group/interface",
  "token-lending/cli",
  "token-lending/program",
  "token-metadata/example",
  "token-metadata/interface",
  "token-swap/program",
  "token-swap/program/fuzz",
  "token-upgrade/cli",
  "token-upgrade/program",
  "token-wrap/program",
  "token/cli",
  "token/program",
  "token/program-2022",
  "token/program-2022-test",
  "token/transfer-hook/cli",
  "token/transfer-hook/example",
  "token/transfer-hook/interface",
  "token/client",
  "utils/cgen",
  "utils/test-client",
  "token-lending/flash_loan_receiver",
]

exclude = [
]

resolver = "2"
[patch.crates-io]
# The following entries are auto-generated by ./patch.crates-io.sh
solana-account-decoder = { path = "../openos-1.17.17/account-decoder" }
solana-banks-client = { path = "../openos-1.17.17/banks-client" }
solana-banks-interface = { path = "../openos-1.17.17/banks-interface" }
solana-banks-server = { path = "../openos-1.17.17/banks-server" }
solana-bloom = { path = "../openos-1.17.17/bloom" }
solana-bucket-map = { path = "../openos-1.17.17/bucket_map" }
solana-clap-utils = { path = "../openos-1.17.17/clap-utils" }
solana-clap-v3-utils = { path = "../openos-1.17.17/clap-v3-utils" }
solana-cli-config = { path = "../openos-1.17.17/cli-config" }
solana-cli-output = { path = "../openos-1.17.17/cli-output" }
solana-client = { path = "../openos-1.17.17/client" }
solana-connection-cache = { path = "../openos-1.17.17/connection-cache" }
solana-core = { path = "../openos-1.17.17/core" }
solana-entry = { path = "../openos-1.17.17/entry" }
solana-faucet = { path = "../openos-1.17.17/faucet" }
solana-frozen-abi = { path = "../openos-1.17.17/frozen-abi" }
solana-frozen-abi-macro = { path = "../openos-1.17.17/frozen-abi/macro" }
solana-geyser-plugin-interface = { path = "../openos-1.17.17/geyser-plugin-interface" }
solana-geyser-plugin-manager = { path = "../openos-1.17.17/geyser-plugin-manager" }
solana-gossip = { path = "../openos-1.17.17/gossip" }
solana-ledger = { path = "../openos-1.17.17/ledger" }
solana-logger = { path = "../openos-1.17.17/logger" }
solana-measure = { path = "../openos-1.17.17/measure" }
solana-merkle-tree = { path = "../openos-1.17.17/merkle-tree" }
solana-metrics = { path = "../openos-1.17.17/metrics" }
solana-net-utils = { path = "../openos-1.17.17/net-utils" }
solana-perf = { path = "../openos-1.17.17/perf" }
solana-poh = { path = "../openos-1.17.17/poh" }
solana-program-runtime = { path = "../openos-1.17.17/program-runtime" }
solana-program-test = { path = "../openos-1.17.17/program-test" }
solana-address-lookup-table-program = { path = "../openos-1.17.17/programs/address-lookup-table" }
solana-bpf-loader-program = { path = "../openos-1.17.17/programs/bpf_loader" }
solana-compute-budget-program = { path = "../openos-1.17.17/programs/compute-budget" }
solana-config-program = { path = "../openos-1.17.17/programs/config" }
solana-stake-program = { path = "../openos-1.17.17/programs/stake" }
solana-vote-program = { path = "../openos-1.17.17/programs/vote" }
solana-zk-token-proof-program = { path = "../openos-1.17.17/programs/zk-token-proof" }
solana-pubsub-client = { path = "../openos-1.17.17/pubsub-client" }
solana-quic-client = { path = "../openos-1.17.17/quic-client" }
solana-rayon-threadlimit = { path = "../openos-1.17.17/rayon-threadlimit" }
solana-remote-wallet = { path = "../openos-1.17.17/remote-wallet" }
solana-rpc = { path = "../openos-1.17.17/rpc" }
solana-rpc-client = { path = "../openos-1.17.17/rpc-client" }
solana-rpc-client-api = { path = "../openos-1.17.17/rpc-client-api" }
solana-rpc-client-nonce-utils = { path = "../openos-1.17.17/rpc-client-nonce-utils" }
solana-runtime = { path = "../openos-1.17.17/runtime" }
solana-sdk = { path = "../openos-1.17.17/sdk" }
solana-sdk-macro = { path = "../openos-1.17.17/sdk/macro" }
solana-program = { path = "../openos-1.17.17/sdk/program" }
solana-send-transaction-service = { path = "../openos-1.17.17/send-transaction-service" }
solana-storage-bigtable = { path = "../openos-1.17.17/storage-bigtable" }
solana-storage-proto = { path = "../openos-1.17.17/storage-proto" }
solana-streamer = { path = "../openos-1.17.17/streamer" }
solana-test-validator = { path = "../openos-1.17.17/test-validator" }
solana-thin-client = { path = "../openos-1.17.17/thin-client" }
solana-tpu-client = { path = "../openos-1.17.17/tpu-client" }
solana-transaction-status = { path = "../openos-1.17.17/transaction-status" }
solana-udp-client = { path = "../openos-1.17.17/udp-client" }
solana-version = { path = "../openos-1.17.17/version" }
solana-zk-token-sdk = { path = "../openos-1.17.17/zk-token-sdk" }
