[package]
name = "spl-example-transfer-lamports"
version = "1.0.0"
description = "Solana Program Library Transfer Lamports Example"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program ={ git = "https://github.com/openlab-openos/openos" ,package="solana-program" }

[dev-dependencies]
solana-program-test = ">=1.17.17,<=2"
solana-sdk = { git = "https://github.com/openlab-openos/openos" ,package="solana-sdk" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
